# designer_plugin_qvideowidget

./: .gitignore  CMakeLists.txt  PKGBUILD  fake_qvideowidget.cpp  fake_qvideowidget.h  qvideowidget_plugin.cpp  qvideowidget_plugin.h
